--- a/src/styles/Countries.module.css
+++ b/src/styles/Countries.module.css
@@ -1,4 +1,8 @@
-.countries {
+.countries_title {
+  font-size: 40px;
+}
+
+.countries_list {
   display: flex;
   flex-wrap: wrap;
 }
@@ -11,12 +15,36 @@
   justify-content: center;
 }
 .country_btn {
-  height: 45px;
+  background-color: transparent;
+  height: 50px;
   max-width: 250px;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 15px;
+  margin-bottom: 20px;
   cursor: pointer;
+  font-size: 18px;
+  transition: all 0.25s ease;
+  background-color: #fff;
+  color: Gray;
+  border: 1px solid gray;
+}
+
+.country_btn:hover {
+  border-color: transparent;
+  background-color: gray;
+  color: #fff;
+}
+
+@media (max-width: 768px) {
+  .country {
+    width: 50%;
+  }
+}
+
+@media (max-width: 480px) {
+  .country {
+    width: 100%;
+  }
 }
