final commit , animation complete

--- a/src/styles/Modal.module.css
+++ b/src/styles/Modal.module.css
@@ -1,5 +1,5 @@
 .modal {
-  background-color: rgba(0 , 0 , 0, 0.5);
+  background-color: rgba(0 , 0 , 0, 0.6);
   position: absolute;
   top: 0;
   bottom: 0;
@@ -11,6 +11,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 3;
 }
 
 .modal_dialog {
