--- a/src/styles/Countries.module.css
+++ b/src/styles/Countries.module.css
@@ -1,5 +1,8 @@
 .countries_title {
   font-size: 40px;
+  font-weight: 400;
+  letter-spacing: 2px;
+  margin-bottom: 40px;
 }
 
 .countries_list {
@@ -25,16 +28,38 @@
   margin-bottom: 20px;
   cursor: pointer;
   font-size: 18px;
-  transition: all 0.25s ease;
+  transition: all 0.5s;
   background-color: #fff;
   color: Gray;
   border: 1px solid gray;
+  position: relative;
+  overflow: hidden;
+}
+
+.country_btn span {
+  position: relative;
+  z-index: 2;
+}
+
+.country_btn::after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: gray;
+  position: absolute;
+  transition: all 0.25s;
+  z-index: 1;
+  top: 100%;
 }
 
 .country_btn:hover {
   border-color: transparent;
-  background-color: gray;
   color: #fff;
+}
+
+.country_btn:hover:after {
+  top: 0;
 }
 
 @media (max-width: 768px) {
